Updated strategy_list_generic.html with the new links to my create pages

--- a/paper_trader/templates/paper_trader/strategy_list_generic.html
+++ b/paper_trader/templates/paper_trader/strategy_list_generic.html
@@ -3,6 +3,12 @@
 {% block title %}Strategy Dashboard{% endblock %}
 
 {% block content %}
+
+    <div style="margin-bottom: 2rem;">
+        <a href="{% url 'paper_trader:strategy_create_fbv' %}"><button>New Strategy (FBV)</button></a>
+        <a href="{% url 'paper_trader:strategy_create_cbv' %}"><button>New Strategy (CBV)</button></a>
+    </div>
+
     <h1>Strategy Dashboard</h1>
 
     <!-- Search and List Section -->
