Removed extra New Strategy button from previous demo

--- a/paper_trader/templates/paper_trader/strategy_list_generic.html
+++ b/paper_trader/templates/paper_trader/strategy_list_generic.html
@@ -6,8 +6,7 @@
     <h1>Strategy Dashboard</h1>
 
     <div style="margin-bottom: 2rem; display: flex; gap: 1rem;">
-        <a href="{% url 'paper_trader:strategy_create_fbv' %}" class="btn">New Strategy (FBV)</a>
-        <a href="{% url 'paper_trader:strategy_create_cbv' %}" class="btn">New Strategy (CBV)</a>
+        <a href="{% url 'paper_trader:strategy_create_fbv' %}" class="btn">New Strategy</a>
         <a href="{% url 'paper_trader:crypto_prices' %}" class="btn">Live Crypto Prices</a>
     </div>
 
